# sneezy

./: .gitignore  Cargo.toml  README.md
lib/: airquality.rs  lib.rs  location.rs
src/: main.rs
