[package]
name = "sneezy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geolocation = "0.2.1"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.107"

[lib]
name = "sneezy"
path = "lib/lib.rs"

[[bin]]
name = "sneezy"
path = "src/main.rs"